--- a/build.gradle
+++ b/build.gradle
@@ -32,8 +32,8 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile("org.projectlombok:lombok:1.16.18")
-	compile('org.postgresql:postgresql')
+	compile('mysql:mysql-connector-java')
+	compile('org.springframework.boot:spring-boot-starter-jdbc')
 
 	testCompile('org.springframework.boot:spring-boot-starter-test')
-
 }
