--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,8 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile("org.projectlombok:lombok:1.16.18")
 //	compile('mysql:mysql-connector-java')
-	compile('org.springframework.boot:spring-boot-starter-jdbc')
+	compile('org.postgresql:postgresql')
+//	compile('org.springframework.boot:spring-boot-starter-jdbc')
 
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
