--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@ dependencies {
 	compile('org.postgresql:postgresql')
 //	compile('org.springframework.boot:spring-boot-starter-jdbc')
 //	providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
-	testCompile('org.springframework.boot:spring-boot-starter-test')
+//	testCompile('org.springframework.boot:spring-boot-starter-test')
 
 	// Swagger
 	compile('io.springfox:springfox-swagger2:2.7.0')
