--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,9 @@ dependencies {
 	compile('org.postgresql:postgresql')
 //	compile('org.springframework.boot:spring-boot-starter-jdbc')
 //	providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
-//	testCompile('org.springframework.boot:spring-boot-starter-test')
+	testCompile('org.springframework.boot:spring-boot-starter-test')
+	compile('org.springframework.boot:spring-boot-starter-mail:1.5.9.RELEASE')
+
 
 	// Swagger
 	compile('io.springfox:springfox-swagger2:2.7.0')
