--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,6 @@ spring.mail.username=jarek.kodilla@gmail.com
 spring.mail.password=Wojtek09!
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# ADMINISTRATION
+admin.mail = jarek.kodilla@gmail.com
