--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,23 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 # ADMINISTRATION
 admin.mail = jarek.kodilla@gmail.com
+
+# ACTUATOR
+endpoint.metrics.enabled=true
+endpoint.health.enabled=true
+endpoint.beans.enabled=true
+endpoint.mappings.enabled=true
+
+# ACTUATOR INFO
+info.app.name=Task Application
+info.app.description=Application has ben created on Kodilla course!
+info.app.version=1.0.0
+info.app.owner.name=John
+info.app.owner.surname=Doe
+info.app.administrator.email=jon.doe@tes.com
+info.app.administrator.adress.street=Super cool street
+info.app.administrator.adress.number=42
+info.app.company.name=TaskCrudAppCreator
+info.app.company.goal=Our goal is to make the world a better place!
+info.app.company.email=task@crud.com
+info.app.company.phone=74489230
