--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,6 +36,7 @@ endpoint.metrics.enabled=true
 endpoint.health.enabled=true
 endpoint.beans.enabled=true
 endpoint.mappings.enabled=true
+management.endpoints.web.expose=*
 
 # ACTUATOR INFO
 info.app.name=Task Application
