--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,6 +29,7 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 # ADMINISTRATION
+admin.name = Jarek
 admin.mail = jarek.kodilla@gmail.com
 
 # ACTUATOR
