--- a/build.gradle
+++ b/build.gradle
@@ -33,8 +33,8 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile("org.projectlombok:lombok:1.16.18")
-//	compile('mysql:mysql-connector-java')
-	compile('org.postgresql:postgresql')
+	compile('mysql:mysql-connector-java')
+//	compile('org.postgresql:postgresql')
 	compile('org.springframework.boot:spring-boot-starter-jdbc')
 //	providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
 	testCompile('org.springframework.boot:spring-boot-starter-test')
